# image-ap-sport-for-laser

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Detener_Laser_App.bat  Iniciar_Laser_App.bat  Instalar_Dependencias.bat  LICENSE  LICENSE-COMMERCIAL.md  README.md  Setup_LaserApp.bat  _win_start_api.bat  _win_start_web.bat  pyproject.toml
assets/: blue_noise_16.npy  blue_noise_32.npy  blue_noise_8.npy
docs/: CODE_SIGNING.md  IMPROVEMENT_LOG.md  META_SYSTEM.md  PLAN_2026-05-15_session3.md  PLAN_GUI_R8.md  RELEASE_READINESS.md  SESSION_HANDOFF_2026-05-15.md  USAGE.md
installer/: LaserApp.iss  README.md
runs/_meta/: history.sqlite
runs/references/: sam2_prompt_example.json
scripts/: __init__.py  api_server.py  dashboard.py  laser_adaptive_match.py  laser_autoruns.py  laser_batch_match.py  laser_blue_noise.py  laser_calibration_fit.py  laser_calibration_wedge.py  laser_chain_score_push.py  laser_compass_probes.py  laser_explain_score.py  laser_input_variants.py  laser_jobs.py  laser_match_preprocess_sweep.py  laser_max_similarity_pipeline.py  laser_optuna_search.py  laser_parameter_sweep.py  laser_physics.py  laser_plateau.py  laser_presets.py  laser_registration.py  laser_runtime_env.py  laser_score_campaign.py  laser_scoring.py  laser_simulator.py  laser_target_match.py
scripts/meta/: __init__.py  analyzer.py  history.py  proposer.py  recorder.py
tests/: conftest.py  stock_urls.py  test_api_server.py  test_laser_blue_noise.py  test_laser_calibration_fit.py  test_laser_calibration_wedge.py  test_laser_input_variants.py  test_laser_parameter_sweep.py  test_laser_physics.py  test_laser_presets.py  test_laser_runtime_env.py  test_laser_simulator.py  test_laser_target_match.py  test_plateau_detector.py  test_render_dispatch.py  test_score_regression.py  test_score_v5.py  test_stock_images.py
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: app.css
web/src/lib/: apiClient.ts  laserPreview.ts
(+3 files in other folders)
