[project]
name = "image-ap-sport-for-laser"
version = "1.0.0"
description = "Image-to-PNG laser preparation: wizard + FastAPI + CO2 physics-aware pipeline"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-image>=0.22.0",
    "opencv-python-headless>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
fast = [
    "numba>=0.59.0",
]
meta = [
    "optuna>=3.6.0",
]
dashboard = [
    "streamlit>=1.32.0",
]
perceptual = [
    "torch>=2.1.0,<3",
    "torchvision>=0.16.0",
    "piq>=0.8.0",
    "lpips>=0.1.4",
]
sam2 = [
    "transformers>=4.46.0",
    "accelerate>=0.34.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# Sin paquete Python importable (solo scripts/); evita que setuptools descubra runs/, web/, reports/.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that download public stock images (needs internet)",
]
